--- a/proc-example/pom.xml
+++ b/proc-example/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.kinetica</groupId>
     <artifactId>kinetica-proc-example</artifactId>
-    <version>1.0</version>
+    <version>7.0.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Kinetica Proc Example</name>
     <dependencies>
