--- a/proc-api/pom.xml
+++ b/proc-api/pom.xml
@@ -3,9 +3,21 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.kinetica</groupId>
     <artifactId>kinetica-proc-api</artifactId>
-    <version>7.0.0.0</version>
+    <version>7.0.0.1</version>
     <packaging>jar</packaging>
     <name>Kinetica Proc API</name>
+    <distributionManagement>
+       <repository>
+          <id>releases</id>
+          <name>Releases</name>
+          <url>http://files.kinetica.com/nexus/content/repositories/releases</url>
+       </repository>
+       <snapshotRepository>
+          <id>snapshots</id>
+          <name>Snapshots</name>
+          <url>http://files.kinetica.com/nexus/content/repositories/snapshots</url>
+       </snapshotRepository>
+    </distributionManagement>
     <dependencies>
         <dependency>
             <groupId>org.bytedeco</groupId>
