--- a/proc-api/pom.xml
+++ b/proc-api/pom.xml
@@ -3,19 +3,19 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.kinetica</groupId>
     <artifactId>kinetica-proc-api</artifactId>
-    <version>7.1.0.1</version>
+    <version>7.1.0.2</version>
     <packaging>jar</packaging>
     <name>Kinetica Proc API</name>
     <distributionManagement>
        <repository>
           <id>releases</id>
           <name>Releases</name>
-          <url>http://files.kinetica.com/nexus/content/repositories/releases</url>
+          <url>https://nexus.kinetica.com/repository/releases</url>
        </repository>
        <snapshotRepository>
           <id>snapshots</id>
           <name>Snapshots</name>
-          <url>http://files.kinetica.com/nexus/content/repositories/snapshots</url>
+          <url>https://nexus.kinetica.com/repository/snapshots</url>
        </snapshotRepository>
     </distributionManagement>
     <dependencies>
@@ -25,6 +25,19 @@
             <version>1.4</version>
         </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <id>ConfigureTargetBuildDir</id>
+            <activation>
+                <property>
+                    <name>target.build.dir</name>
+                </property>
+            </activation>
+            <build>
+                <directory>${target.build.dir}</directory>
+            </build>
+        </profile>
+    </profiles>
     <build>
         <plugins>
             <plugin>
@@ -74,7 +87,8 @@
     </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <target.build.dir>target</target.build.dir> <!-- override on cmd-line -->
     </properties>
 </project>
